# color-picker-slint

./: Cargo.toml  README.md  build.rs
src/: main.rs  old.rs
ui/: main.slint  todo.slint
