[package]
name = "color-picker-slint"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
i-slint-backend-winit = "1.2.2"
image = "0.24.7"
screenshots = "0.8.5"
slint = "1.2.2"
winit = "0.28.7"

[build-dependencies]
slint-build = "1.2.2"
